<resources>
    <string name="app_name">TheHealthyCatApp</string>
    <string name="title_activity_chart">ChartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="chart_button">Chart</string>
    <string name="settings_button">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="cat_info_button">Cat Info</string>
    <string name="title_activity_cat_info">CatInfo</string>
    <string name="cat_name">Cat Name:</string>
    <string name="cat_name2">Cat Name</string>
    <string name="current_weight">Current Weight:</string>
    <string name="target_weight">Target Weight:</string>
    <string name="target_weight2">Target Weight in Pounds (lb)</string>
    <string name="SaveButton">Save</string>
    <string name="CancelButton">Cancel</string>
    <string name="FrequencyFieldText">Number of Feedings (Per Day)</string>
</resources>