<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameLayout"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cat_name2" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TargetWeightLayout"
        android:layout_width="280dp"
        android:layout_height="70dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TargetWeightEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/target_weight2"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/TimeEditorList"
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginBottom="60dp"
        app:layout_constraintBottom_toTopOf="@+id/SettingsSaveButton"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/SettingsSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="384dp"
        android:clickable="false"
        android:onClick="OnSave"
        android:text="@string/SaveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TargetWeightLayout" />

    <Button
        android:id="@+id/SettingsCancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:onClick="OnCancel"
        android:text="@string/CancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TargetWeightLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>